--- a/pwa-sample/package.json
+++ b/pwa-sample/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.19.1",
     "next": "13.2.4",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "18.0.33",
